--- a/feilire.html
+++ b/feilire.html
@@ -2,61 +2,134 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Event List</title>
+<title>Feilire - Event List</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
 <style>
   body { font-family: Arial, sans-serif; margin: 40px; }
+  h1 { text-align: center; }
   table { border-collapse: collapse; width: 100%; margin-top: 20px; }
   th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
   th { cursor: pointer; background: #f2f2f2; }
-  input { padding: 5px; width: 200px; }
+  .filters { margin-bottom: 20px; }
+  .filters select, .filters label { margin-right: 15px; }
 </style>
 </head>
 <body>
 
-<h1>Upcoming Events</h1>
-<input class="search" placeholder="Filter events" />
+<h1>Imeachtaí as Gaeilge i nGaillimh</h1>
+
+<div class="filters">
+  <label>
+    Leibhéal Gaeilge:
+    <select id="levelFilter">
+      <option value="">Gach leibhéal</option>
+      <option value="Bonnleibhéal">Bonnleibhéal</option>
+      <option value="Meánleibhéal">Meánleibhéal</option>
+      <option value="Ardleibhéal">Ardleibhéal</option>
+    </select>
+  </label>
+
+  <label>
+    Fáilte roimh:
+    <select id="admissionFilter">
+      <option value="">Gach cineál</option>
+      <option value="Fáilte roimh chách">Fáilte roimh chách</option>
+      <option value="Chách, ach ticéad le ceannach / spás le cur in áirithe">Chách, ach ticéad</option>
+      <option value="Imeacht le haghaidh grúpa áirithe">Grúpa áirithe</option>
+    </select>
+  </label>
+
+  <label>Grúpa Aoise:</label>
+  <label><input type="checkbox" class="ageFilter" value="Páistí réamhscoile"> Réamhscoile</label>
+  <label><input type="checkbox" class="ageFilter" value="Páistí bunscoile"> Bunscoile</label>
+  <label><input type="checkbox" class="ageFilter" value="Páistí meánscoile"> Meánscoile</label>
+  <label><input type="checkbox" class="ageFilter" value="Daoine fásta"> Daoine fásta</label>
+  <label><input type="checkbox" class="ageFilter" value="Mic léinn amháin"> Mic léinn</label>
+</div>
 
 <div id="events">
   <table>
     <thead>
       <tr>
-        <th class="sort" data-sort="name">Name</th>
-        <th class="sort" data-sort="date">Date</th>
-        <th class="sort" data-sort="location">Location</th>
+        <th class="sort" data-sort="title">Teideal</th>
+        <th class="sort" data-sort="date">Dáta</th>
+        <th class="sort" data-sort="time">Am</th>
+        <th class="sort" data-sort="location">Seoladh</th>
+        <th class="sort" data-sort="level">Leibhéal</th>
+        <th class="sort" data-sort="age">Grúpa Aoise</th>
+        <th class="sort" data-sort="admission">Fáilte roimh</th>
+        <th>Tuilleadh sonraí</th>
       </tr>
     </thead>
     <tbody class="list">
-      <!-- Rows will be injected here -->
+      <!-- Table rows will be injected here -->
     </tbody>
   </table>
 </div>
 
 <script>
-// Replace this with your published CSV URL
-const csvUrl = "https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/gviz/tq?tqx=out:csv&sheet=Sheet1";
+// Replace with your published CSV URL
+const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRa8NU6x7B_AZNcibBPSbqucyEX8tTf83ejnLgtHFdaQzqh4bsRNRv38YdMaMMMTaaKQ8pZ8YthEjg5/pub?gid=2075484807&single=true&output=csv";
 
-// Fetch CSV and convert to table rows
+// Helper to parse CSV
+function csvToArray(str) {
+  const rows = str.trim().split("\n");
+  return rows.map(r => r.split(","));
+}
+
+// Fetch CSV and populate table
 fetch(csvUrl)
   .then(res => res.text())
   .then(csv => {
-    const rows = csv.split("\n").slice(1); // skip header
+    const data = csvToArray(csv);
+    const header = data[0];
+    const rows = data.slice(1);
+
     const tbody = document.querySelector(".list");
-    rows.forEach(row => {
-      const cols = row.split(",");
-      if (cols[3] && cols[3].toLowerCase() === "true") { // check Approved
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td class="name">${cols[0]}</td>
-                        <td class="date">${cols[1]}</td>
-                        <td class="location">${cols[2]}</td>`;
-        tbody.appendChild(tr);
-      }
+
+    rows.forEach(r => {
+      const approved = r[header.indexOf("Approved")]?.trim().toLowerCase() === "true";
+      if (!approved) return; // skip unapproved
+
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td class="title">${r[header.indexOf("Teideal an imeachta")]}</td>
+        <td class="date">${r[header.indexOf("Dáta an imeachta")]}</td>
+        <td class="time">${r[header.indexOf("Am an imeachta")]}</td>
+        <td class="location">${r[header.indexOf("Seoladh an imeachta")]}</td>
+        <td class="level">${r[header.indexOf("Imeacht oiriúnach le haghaidh cén caighdeán Gaeilge?")]}</td>
+        <td class="age">${r[header.indexOf("Imeacht oiriúnach do cén aoisghrúpa?")]}</td>
+        <td class="admission">${r[header.indexOf("Fáilte roimh..?")]}</td>
+        <td class="details">${r[header.indexOf("Tuilleadh sonraí")]}</td>
+      `;
+      tbody.appendChild(tr);
     });
 
     // Initialize List.js
-    new List("events", {
-      valueNames: ["name", "date", "location"]
-    });
+    const options = {
+      valueNames: ["title","date","time","location","level","age","admission"]
+    };
+    const eventList = new List("events", options);
+
+    // Filter function
+    function applyFilters() {
+      const selectedLevel = document.getElementById("levelFilter").value;
+      const selectedAdmission = document.getElementById("admissionFilter").value;
+      const selectedAges = Array.from(document.querySelectorAll(".ageFilter:checked")).map(cb => cb.value);
+
+      eventList.filter(item => {
+        const vals = item.values();
+        const matchLevel = !selectedLevel || vals.level === selectedLevel;
+        const matchAdmission = !selectedAdmission || vals.admission === selectedAdmission;
+        const matchAge = !selectedAges.length || selectedAges.some(age => vals.age.includes(age));
+        return matchLevel && matchAdmission && matchAge;
+      });
+    }
+
+    // Attach filter events
+    document.getElementById("levelFilter").addEventListener("change", applyFilters);
+    document.getElementById("admissionFilter").addEventListener("change", applyFilters);
+    document.querySelectorAll(".ageFilter").forEach(cb => cb.addEventListener("change", applyFilters));
   });
 </script>
 
