--- a/feilire.html
+++ b/feilire.html
@@ -74,7 +74,6 @@
 </table>
 
 <script>
-  // 🔴 PASTE YOUR PUBLISHED CSV URL HERE
   const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRa8NU6x7B_AZNcibBPSbqucyEX8tTf83ejnLgtHFdaQzqh4bsRNRv38YdMaMMMTaaKQ8pZ8YthEjg5/pub?gid=2075484807&single=true&output=csv";
 
   fetch(CSV_URL)
@@ -93,6 +92,7 @@
     });
 
   function renderTable(rows) {
+      console.log("Parsed rows:", rows); // 👈 ADD THIS LINE TEMPORARILY
     const tbody = document.querySelector("#events tbody");
     tbody.innerHTML = "";
 
