--- a/feilire.html
+++ b/feilire.html
@@ -1,92 +1,81 @@
 <!DOCTYPE html>
 <html lang="ga">
 <head>
-  <meta charset="UTF-8">
-  <title>Féilire Imeachtaí</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Féilire Imeachtaí</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      margin: 2rem;
-      line-height: 1.5;
-    }
+<style>
+body {
+  font-family: system-ui, sans-serif;
+  margin: 2rem;
+  line-height: 1.5;
+}
 
-    h1 {
-      margin-bottom: 0.5rem;
-    }
+h1 { margin-bottom: 0.5rem; }
 
-    .muted {
-      color: #666;
-      font-size: 0.9rem;
-      margin-bottom: 1.5rem;
-    }
+.muted {
+  color: #666;
+  font-size: 0.9rem;
+  margin-bottom: 1.5rem;
+}
 
-    .filters {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.5rem;
-      margin-bottom: 1rem;
-    }
+.filters {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
 
-    fieldset {
-      border: 1px solid #ddd;
-      padding: 0.8rem 1rem;
-      min-width: 260px;
-    }
+fieldset {
+  border: 1px solid #ddd;
+  padding: 0.8rem 1rem;
+  min-width: 260px;
+}
 
-    legend {
-      font-weight: bold;
-    }
+legend { font-weight: bold; }
 
-    label {
-      display: block;
-      font-weight: normal;
-      margin-bottom: 0.3rem;
-    }
+label {
+  display: block;
+  margin-bottom: 0.3rem;
+}
 
-    button {
-      margin: 1rem 0 2rem 0;
-      padding: 0.4rem 0.8rem;
-      font-size: 1rem;
-    }
+button {
+  margin: 1rem 0 2rem 0;
+  padding: 0.4rem 0.8rem;
+  font-size: 1rem;
+}
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-    th, td {
-      border: 1px solid #ddd;
-      padding: 0.6rem;
-      vertical-align: top;
-    }
+th, td {
+  border: 1px solid #ddd;
+  padding: 0.6rem;
+  vertical-align: top;
+}
 
-    th {
-      background: #f4f4f4;
-      text-align: left;
-    }
+th {
+  background: #f4f4f4;
+  text-align: left;
+}
 
-    tr:nth-child(even) {
-      background: #fafafa;
-    }
-  </style>
+tr:nth-child(even) {
+  background: #fafafa;
+}
+</style>
 
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 
 <body>
 
 <h1>Imeachtaí as Gaeilge i nGaillimh</h1>
-<p class="muted">
-  Taispeántar anseo imeachtaí a cuireadh isteach tríd an bhfoirm agus atá ceadaithe.
-</p>
+<p class="muted">Imeachtaí ceadaithe amháin.</p>
 
-<!-- Filters -->
 <div class="filters">
 
-  <!-- Level filter -->
   <fieldset id="levelFilter">
     <legend>Leibhéal Gaeilge</legend>
     <label><input type="checkbox" value="Bonnleibhéal"> Bonnleibhéal</label>
@@ -94,7 +83,6 @@
     <label><input type="checkbox" value="Ardleibhéal"> Ardleibhéal</label>
   </fieldset>
 
-  <!-- Age group filter -->
   <fieldset id="ageFilter">
     <legend>Aoisghrúpa</legend>
     <label><input type="checkbox" value="Páistí réamhscoile (le tuismitheoirí/caomhnóirí leo)"> Páistí réamhscoile</label>
@@ -104,124 +92,112 @@
     <label><input type="checkbox" value="Mic léinn amháin"> Mic léinn amháin</label>
   </fieldset>
 
+  <fieldset id="areaFilter">
+    <legend>Ceantar</legend>
+    <!-- dynamically populated -->
+  </fieldset>
+
 </div>
 
 <button id="applyFilter">Scag</button>
 
 <table id="events">
-  <thead>
-    <tr>
-      <th>Teideal</th>
-      <th>Dáta</th>
-      <th>Am</th>
-      <th>Seoladh</th>
-      <th>Leibhéal Gaeilge</th>
-      <th>Aoisghrúpa</th>
-      <th>Fáilte roimh</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
+<thead>
+<tr>
+  <th>Dáta</th>
+  <th>Teideal</th>
+  <th>Am</th>
+  <th>Seoladh</th>
+  <th>Ceantar</th>
+  <th>Leibhéal Gaeilge</th>
+  <th>Aoisghrúpa</th>
+  <th>Fáilte roimh</th>
+</tr>
+</thead>
+<tbody></tbody>
 </table>
 
 <script>
-const CSV_URL =
-  "https://docs.google.com/spreadsheets/d/e/2PACX-1vRa8NU6x7B_AZNcibBPSbqucyEX8tTf83ejnLgtHFdaQzqh4bsRNRv38YdMaMMMTaaKQ8pZ8YthEjg5/pub?gid=2075484807&single=true&output=csv";
-
+const CSV_URL = "YOUR CSV URL HERE";
 let allRows = [];
 
-// Fetch CSV and parse
 fetch(CSV_URL)
-  .then(res => res.text())
+  .then(r => r.text())
   .then(csv => {
     Papa.parse(csv, {
       header: true,
       skipEmptyLines: true,
-      complete: results => {
-        allRows = results.data;
+      complete: res => {
+        allRows = res.data;
+        buildAreaFilter(allRows);
         renderTable(allRows);
       }
     });
   });
 
-// Format date from MM/DD/YYYY -> DD/MM/YYYY
-function formatDateUStoEU(usDate) {
-  if (!usDate) return "";
-  const parts = usDate.split("/");
-  if (parts.length !== 3) return usDate;
-  const [month, day, year] = parts;
-  return `${day.padStart(2,'0')}/${month.padStart(2,'0')}/${year}`;
+function formatDate(us) {
+  if (!us) return "";
+  const [m,d,y] = us.split("/");
+  return `${d.padStart(2,"0")}/${m.padStart(2,"0")}/${y}`;
 }
 
-// Parse date+time for sorting
-function parseEventDateTime(row) {
-  const dateStr = row["Dáta an imeachta (MM/LL/BBBB)"] || "";
-  const timeStr = row["Am an imeachta"] || "00:00";
-  const parts = dateStr.split("/");
-  if (parts.length !== 3) return new Date(9999,0,1);
-  const [month, day, year] = parts;
-  return new Date(`${year}-${month.padStart(2,'0')}-${day.padStart(2,'0')}T${timeStr}`);
+function parseDateTime(row) {
+  const d = row["Dáta an imeachta (MM/LL/BBBB)"];
+  const t = row["Am an imeachta"] || "00:00";
+  if (!d) return new Date(9999,0,1);
+  const [m,da,y] = d.split("/");
+  return new Date(`${y}-${m}-${da}T${t}`);
 }
 
-// Render table with optional filters
-function renderTable(rows, levelFilter = [], ageFilter = []) {
-  const tbody = document.querySelector("#events tbody");
-  tbody.innerHTML = "";
-
-  // Clone and sort rows chronologically
-  const sortedRows = rows.slice().sort((a,b) => parseEventDateTime(a) - parseEventDateTime(b));
-
-  sortedRows.forEach(row => {
-    try {
-      if (!row.Approved || row.Approved.toString().trim().toLowerCase() !== "true") return;
-
-      // Level filter
-      if (levelFilter.length > 0) {
-        const levels = (row["Imeacht oiriúnach le haghaidh cén caighdeán Gaeilge?"] || "")
-          .split(",")
-          .map(s => s.trim());
-        if (!levels.some(l => levelFilter.includes(l))) return;
-      }
-
-      // Age filter
-      if (ageFilter.length > 0) {
-        const ages = (row["Imeacht oiriúnach do cén aoisghrúpa?"] || "")
-          .split(",")
-          .map(s => s.trim());
-        if (!ages.some(a => ageFilter.includes(a))) return;
-      }
-
-      const cell = v => (v ?? "");
-      const tr = document.createElement("tr");
-
-      tr.innerHTML = `
-        <td>${cell(row["Teideal an imeachta"])}</td>
-        <td>${formatDateUStoEU(cell(row["Dáta an imeachta (MM/LL/BBBB)"]))}</td>
-        <td>${cell(row["Am an imeachta"])}</td>
-        <td>${cell(row["Seoladh an imeachta"])}</td>
-        <td>${cell(row["Imeacht oiriúnach le haghaidh cén caighdeán Gaeilge?"])}</td>
-        <td>${cell(row["Imeacht oiriúnach do cén aoisghrúpa?"])}</td>
-        <td>${cell(row["Fáilte roimh..?"])}</td>
-      `;
-
-      tbody.appendChild(tr);
-    } catch (e) {
-      console.error("Render error:", row, e);
-    }
+function buildAreaFilter(rows) {
+  const set = new Set();
+  rows.forEach(r => r.Ceantar && set.add(r.Ceantar.trim()));
+  const fs = document.getElementById("areaFilter");
+  [...set].sort().forEach(a => {
+    fs.insertAdjacentHTML(
+      "beforeend",
+      `<label><input type="checkbox" value="${a}"> ${a}</label>`
+    );
   });
 }
 
-// Apply filter button
-document.getElementById("applyFilter").addEventListener("click", () => {
-  const levelSelected = Array.from(
-    document.querySelectorAll("#levelFilter input:checked")
-  ).map(cb => cb.value);
+function renderTable(rows, levels=[], ages=[], areas=[]) {
+  const tbody = document.querySelector("#events tbody");
+  tbody.innerHTML = "";
 
-  const ageSelected = Array.from(
-    document.querySelectorAll("#ageFilter input:checked")
-  ).map(cb => cb.value);
+  rows
+    .filter(r => r.Approved?.toLowerCase() === "true")
+    .sort((a,b)=>parseDateTime(a)-parseDateTime(b))
+    .forEach(r => {
 
-  renderTable(allRows, levelSelected, ageSelected);
-});
+      if (levels.length && !r["Imeacht oiriúnach le haghaidh cén caighdeán Gaeilge?"]?.split(",").map(s=>s.trim()).some(l=>levels.includes(l))) return;
+      if (ages.length && !r["Imeacht oiriúnach do cén aoisghrúpa?"]?.split(",").map(s=>s.trim()).some(a=>ages.includes(a))) return;
+      if (areas.length && !areas.includes(r.Ceantar)) return;
+
+      tbody.insertAdjacentHTML("beforeend", `
+        <tr>
+          <td>${formatDate(r["Dáta an imeachta (MM/LL/BBBB)"])}</td>
+          <td>${r["Teideal an imeachta"]||""}</td>
+          <td>${r["Am an imeachta"]||""}</td>
+          <td>${r["Seoladh an imeachta"]||""}</td>
+          <td>${r.Ceantar||""}</td>
+          <td>${r["Imeacht oiriúnach le haghaidh cén caighdeán Gaeilge?"]||""}</td>
+          <td>${r["Imeacht oiriúnach do cén aoisghrúpa?"]||""}</td>
+          <td>${r["Fáilte roimh..?"]||""}</td>
+        </tr>
+      `);
+    });
+}
+
+document.getElementById("applyFilter").onclick = () => {
+  const get = sel => [...document.querySelectorAll(sel+":checked")].map(x=>x.value);
+  renderTable(
+    allRows,
+    get("#levelFilter input"),
+    get("#ageFilter input"),
+    get("#areaFilter input")
+  );
+};
 </script>
 
 </body>
