--- a/feilire.html
+++ b/feilire.html
@@ -92,10 +92,34 @@ tr:nth-child(even) {
     <label><input type="checkbox" value="Mic léinn amháin"> Mic léinn amháin</label>
   </fieldset>
 
-  <fieldset id="areaFilter">
-    <legend>Ceantar</legend>
-    <!-- dynamically populated -->
-  </fieldset>
+<fieldset id="areaFilter">
+  <legend>Ceantar</legend>
+
+  <label><input type="checkbox" value="Baile Átha an Rí"> Baile Átha an Rí</label>
+  <label><input type="checkbox" value="Baile Locha Riach"> Baile Locha Riach</label>
+  <label><input type="checkbox" value="Bearna agus Cnoc na Cathrach"> Bearna agus Cnoc na Cathrach</label>
+  <label><input type="checkbox" value="Cathair na Gaillimhe"> Cathair na Gaillimhe</label>
+  <label><input type="checkbox" value="Ceantar na nOileán"> Ceantar na nOileán</label>
+  <label><input type="checkbox" value="An Cheathrú Rua"> An Cheathrú Rua</label>
+  <label><input type="checkbox" value="An Clochán"> An Clochán</label>
+  <label><input type="checkbox" value="Cois Fharraige"> Cois Fharraige</label>
+  <label><input type="checkbox" value="Conamara Láir"> Conamara Láir</label>
+  <label><input type="checkbox" value="Conamara Thuaidh"> Conamara Thuaidh</label>
+  <label><input type="checkbox" value="Corr na Móna"> Corr na Móna</label>
+  <label><input type="checkbox" value="Dúiche Sheoigheach agus Tuar Mhic Éadaigh">
+    Dúiche Sheoigheach agus Tuar Mhic Éadaigh
+  </label>
+  <label><input type="checkbox" value="An tEachréidh"> An tEachréidh</label>
+  <label><input type="checkbox" value="Maigh Cuilinn"> Maigh Cuilinn</label>
+  <label><input type="checkbox" value="Oileáin Árann"> Oileáin Árann</label>
+  <label><input type="checkbox" value="Oirthear Chathair na Gaillimhe">
+    Oirthear Chathair na Gaillimhe
+  </label>
+  <label><input type="checkbox" value="Ollscoil na Gaillimhe"> Ollscoil na Gaillimhe</label>
+  <label><input type="checkbox" value="Tuaim"> Tuaim</label>
+  <label><input type="checkbox" value="Eile"> Eile</label>
+</fieldset>
+
 
 </div>
 
@@ -129,7 +153,6 @@ fetch(CSV_URL)
       skipEmptyLines: true,
       complete: res => {
         allRows = res.data;
-        buildAreaFilter(allRows);
         renderTable(allRows);
       }
     });
@@ -149,17 +172,6 @@ function parseDateTime(row) {
   return new Date(`${y}-${m}-${da}T${t}`);
 }
 
-function buildAreaFilter(rows) {
-  const set = new Set();
-  rows.forEach(r => r.Ceantar && set.add(r.Ceantar.trim()));
-  const fs = document.getElementById("areaFilter");
-  [...set].sort().forEach(a => {
-    fs.insertAdjacentHTML(
-      "beforeend",
-      `<label><input type="checkbox" value="${a}"> ${a}</label>`
-    );
-  });
-}
 
 function renderTable(rows, levels=[], ages=[], areas=[]) {
   const tbody = document.querySelector("#events tbody");
@@ -175,7 +187,10 @@ function renderTable(rows, levels=[], ages=[], areas=[]) {
 
       if (levels.length && !r["Imeacht oiriúnach le haghaidh cén caighdeán Gaeilge?"]?.split(",").map(s=>s.trim()).some(l=>levels.includes(l))) return;
       if (ages.length && !r["Imeacht oiriúnach do cén aoisghrúpa?"]?.split(",").map(s=>s.trim()).some(a=>ages.includes(a))) return;
-      if (areas.length && !areas.includes(r.Ceantar)) return;
+if (areas.length > 0) {
+  const ceantar = (r.Ceantar || "").trim();
+  if (!areas.includes(ceantar)) return;
+}
 
       tbody.insertAdjacentHTML("beforeend", `
         <tr>
