Update feilire.html - google csv link again

--- a/feilire.html
+++ b/feilire.html
@@ -153,7 +153,7 @@ tr:nth-child(even) {
 </table>
 
 <script>
-const CSV_URL = "YOUR CSV URL HERE";
+const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRa8NU6x7B_AZNcibBPSbqucyEX8tTf83ejnLgtHFdaQzqh4bsRNRv38YdMaMMMTaaKQ8pZ8YthEjg5/pub?gid=2075484807&single=true&output=csv";
 let allRows = [];
 
 fetch(CSV_URL)
