--- a/feilire.html
+++ b/feilire.html
@@ -100,7 +100,7 @@ tr:nth-child(even) {
     <label><input type="checkbox" value="Páistí bunscoile (le tuismitheoirí/caomhnóirí leo)"> Páistí bunscoile</label>
     <label><input type="checkbox" value="Páistí meánscoile (le tuismitheoirí/caomhnóirí leo)"> Páistí meánscoile</label>
     <label><input type="checkbox" value="Daoine fásta"> Daoine fásta</label>
-    <label><input type="checkbox" value="Mic léinn amháin"> Mic léinn amháin</label>
+    <label><input type="checkbox" value="Mic léinn"> Mic léinn</label>
   </fieldset>
 
 <fieldset id="areaFilter">
