--- a/feilire.html
+++ b/feilire.html
@@ -210,7 +210,7 @@ if (areas.length > 0) {
 
       tbody.insertAdjacentHTML("beforeend", `
         <tr>
-          <td>${formatDateUStoEU(cell(row["Dáta an imeachta"]))}</td>          
+          <td>${formatDateUStoEU(cell(r["Dáta an imeachta"]))}</td>          
           <td>${r["Teideal an imeachta"]||""}</td>
           <td>${r["Am an imeachta"]||""}</td>
           <td>${r["Seoladh an imeachta"]||""}</td>
